# ajou-llmops-2025-2nd-semester

./: .env.sample  CLAUDE.md  README.md  pyproject.toml  requirements-week01.txt  requirements.txt
.claude/: settings.json
src/: __init__.py
week01/: results.csv  week01_ollama_practice.ipynb
week02/: 01_basic_prompt_engineering.ipynb  02_advanced_reasoning.ipynb  03_advanced_integration.ipynb  04_production_techniques.ipynb
week03/: LLMOPS 기반 서비스 제작 논의.txt  prompt_eval_and_version_mgmt.ipynb
week03/datasets/: meeting_summary_01.md  meeting_summary_02.md  meeting_transcript_01.txt  meeting_transcript_02.txt
week03/prompts/: meeting_minutes_v0.1.prompty  meeting_minutes_v0.2.prompty
week04/: RAG_Kor_Pinecone_QuickLab.ipynb
week05/: Hybrid_RAG_Pinecone_MIRACL_ko_ollama.ipynb
week05/artifacts/: bm25_encoder.pkl
week06/: 06_lora_sft.ipynb
week06/data/: train.jsonl  val.jsonl
week07/: 07_dpo.ipynb
week09/: .env.sample  09_fastapi_inference_lab.ipynb  k6-loadtest.js  locustfile.py  requirements_week09.txt  week09_insomnia_export.json  week09_postman_collection.json
week09/week09_app/: cache_mem.py  main.py  mock_llm.py  rate_limit.py  utils_hash.py
week10/: week10_llmops_practice.ipynb
week10/logs/: llm_responses.csv
week11/: week11_rag_synthetic_eval.ipynb
week11/week11_data/: documents.json  eval_qas.csv
week12/: week12_agents_tools_memory_chains_langchain_langgraph_langfuse.ipynb
week13/: week13_security_safety_lab.ipynb
week13/week13_logs/: safety_log.csv
week14/: prompts_week14.csv  week14_cost_autoscale_lab.ipynb
(+5 files in other folders)
