[tool.poetry]
name = "ajou-llmops-2025-2nd-semester"
version = "0.1.0"
description = "Ajou University LLMOps Course Project"
authors = ["Student"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
transformers = ">=4.42"
torch = "*"
accelerate = "*"
python-dotenv = "*"
requests = "*"
langchain = "*"
jupyter = "*"
ipykernel = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
